	*	 Windows-specific changes to R		 *
	*	 See the file NEWS for changes that	 *
	*        affect all versions of R.		 *
	**************************************************


	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


    		CHANGES IN R VERSION 2.10.0


PACKAGE INSTALLATION

    o	Rcmd SHLIB (which is used by Rcmd INSTALL) now calls 'make'
	without a target, rather than target 'all'.  This is now the
	same as on Unix, and was announced in the NEWS for 2.9.0.



	**************************************************
	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


    		CHANGES IN R VERSION 2.9.0


NEW FEATURES

    o	memory.size() and memory.limits() now return rounded values.
    
    o	The Rgui preferences dialog now allows more flexible colour
    	settings, and shows a sample of what will be displayed.

    o	The file selection items on Rgui's File menu now work in
	Unicode and so allow filenames not in the current encoding to
	be selected.

    o	file.choose() and choose.files() now work with Unicode file
	names, so are able to select filenames not in the current
	encoding.  (Note that we do not expect to handle directory
	paths not in the current encoding and they will not be
	retained as the current search directory.)

    o	The script editor is now able to open files with names which are
	not in the current encoding: however the title displayed will
	replace invalid bytes by '?'.

    o	file() and pipe() now open non-ASCII pathnames as Unicode:
	this helps if R is running in a character set different from that
	used by Windows.

    o	help(topic, offline=TRUE) now creates a file called <topic>.tex,
	rather than Rdoc.tex.

    o	The trio library has been updated to version 1.13.

    o	New function msgWindow() to allow a windows() device or the