@@ -27,7 +27,8 @@ assign(".Windows.Options",
             buffered = TRUE,
             restoreConsole = FALSE,
             clickToConfirm = TRUE,
-            title = ""),
+            title = "",
+            fillOddEven = TRUE),
        envir = .WindowsEnv)
 
 assign(".Windows.Options.default",
@@ -52,7 +53,8 @@ windows.options <- function(..., reset=FALSE)
 windows <- function(width, height, pointsize,
                     record, rescale, xpinch, ypinch,
                     bg, canvas, gamma, xpos, ypos,
-                    buffered, title, restoreConsole, clickToConfirm)
+                    buffered, title, restoreConsole, clickToConfirm,
+                    fillOddEven)
 {
     new <- list()
     if(!missing(width)) new$width <- as.double(width)
@@ -71,6 +73,7 @@ windows <- function(width, height, pointsize,
     if(!missing(title)) new$title <- title
     if(!missing(restoreConsole)) new$restoreConsole <- restoreConsole
     if(!missing(clickToConfirm)) new$clickToConfirm <- clickToConfirm
+    if(!missing(fillOddEven)) new$fillOddEven <- fillOddEven
     old <- check.options(new = new, envir = .WindowsEnv,
                          name.opt = ".Windows.Options",
 			 reset = FALSE, assign.opt = FALSE)
@@ -80,7 +83,8 @@ windows <- function(width, height, pointsize,
                         old$record, rescale, old$xpinch, old$ypinch,
                         old$canvas, old$gamma, old$xpos, old$ypos,
                         old$buffered, .PSenv, old$bg,
-                        old$restoreConsole, old$title, old$clickToConfirm))
+                        old$restoreConsole, old$title, old$clickToConfirm,
+                        old$fillOddEven))
 }
 
 win.graph <- function(width, height, pointsize)
